2009-01-29	Gene Smith <gene.smith@siemens.com>

	PR 1363/filesystem
	* libfs/src/dosfs/fat.h: Fix issue where 32 bit values are not written
	correctly in FAT f/s data.

2009-01-29	Eric Norum <norume@aps.anl.gov>

	PR 1364/cpukit
	* libcsupport/src/gxx_wrappers.c: Fix compilation problems when
	diagnostics enabled.

2009-01-21	Nickolay Kolchin <nbkolchin@gmail.com>
	        Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1357/cpukit
	* rtems/src/tasks.c: Ensure creating a task with no ASR is honored.

2009-01-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1351/cpukit
	* sapi/include/confdefs.h: Mask off unlimited object bit before using
	configured number in calculations.

2009-01-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/aio.h, posix/src/aio_suspend.c: Make aio_suspend()
	POSIX-compliant.

2008-12-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libblock/src/bdbuf.c: Fix typo having crept in during
	  boolean->bool transition.

2008-12-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/nfsclient/Makefile.am: Remove RTEMS_RELLDFLAGS.
	* aclocal/prog-cc.m4: Add RTEMS_RELLDFLAGS hack.
	* libfs/src/nfsclient/src/dirutils.c: #include <limits.h>.

2008-12-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/include/rtems/rtems/clock.h: #include <sys/time.h>
	* librpc/include/rpc/rpcent.h: #include <rpc/types.h>.
	* librpc/include/rpc/xdr.h: #include <rtems/bsd/sys/cdefs.h>.

2008-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1348/cpukit
	* rtems/src/ratemonperiod.c: Properly handle period statistics after
	cpu usage information is reset while a period is running.

2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1347/cpukit
	* rtems/include/rtems/rtems/timer.h, rtems/src/rtemstimer.c,
	rtems/src/timerreset.c, rtems/src/timerserver.c,
	rtems/src/timerserverfireafter.c, rtems/src/timerserverfirewhen.c,
	score/Makefile.am, score/include/rtems/score/watchdog.h: Rework Timer